--- a/idex.html
+++ b/idex.html
@@ -17,8 +17,8 @@
         
     <div class="container">
         <nav>
+            <header>chirpus inc.</header>
             <ul>
-                <li>chirpus inc.</li>
                 <li><a href="#">Work</a></li>
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Contact</a></li>
@@ -28,8 +28,11 @@
 
         <h1>chirpus inc.</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed lorem diam. Phasellus tristique molestie lectus id tristique. Integer eu lacus ornare, consequat lectus ac, fringilla lorem. Integer et varius massa, interdum sodales lectus. Fusce non turpis ac enim dapibus ullamcorper ac vel est. Sed nec magna venenatis, condimentum tellus scelerisque, pharetra neque. Ut blandit diam lorem, nec consequat orci semper in. Vivamus turpis metus, facilisis at dolor et, molestie vehicula diam. Donec aliquet orci leo, in placerat dui dictum eget.</p>
-        <button>Scroll Down</button>
     </div>
+    <button class="scroll">Scroll Down</button>
+    <div class="circle-1"></div>
+    <div class="circle-2"></div>
+    <div class="circle-3"></div>
         <script src="" async defer></script>
     </body>
 </html>
